--- a/simplistic-side-by-side.html
+++ b/simplistic-side-by-side.html
@@ -41,6 +41,86 @@
     <!-- <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> -->
     <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
     <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
+    <style>
+        header,
+        nav,
+        article,
+        footer {
+            display: block;
+        }
+
+        body {
+            width: 500px;
+            margin: auto;
+            border: 1px solid rgba(0, 0, 0, .1);
+            background: #58a linear-gradient(#FF9966, #58a);
+            border-radius: .2em;
+            box-shadow: 0 .05em .25em rgba(0, 0, 0, .5);
+            color: white;
+            text-shadow: 0 -.05em .05em rgba(0, 0, 0, .5);
+            font-size: 125%;
+            line-height: 1.5;
+            border-width: 10px;
+            border-left-width: 0;
+        }
+
+        h1 {
+            margin-bottom: 10px;
+        }
+
+        article {
+            display: inline;
+        }
+
+        h2 {
+            font-size: 100%;
+            font-weight: bold;
+            background: rgba(0, 0, 0, .5);
+            margin-top: 0;
+            margin-bottom: 0;
+        }
+
+        footer {
+            clear: both;
+            background-color: #FF9966;
+            text-align: center;
+        }
+
+        header {
+            width: 500px;
+            background-color: #FF9966;
+            text-align: center;
+            margin: auto;
+        }
+
+        nav {
+            float: left;
+            width: 25%;
+            background-color: #FF9966;
+            margin-bottom: 10px;
+        }
+
+        article {
+            float: left;
+            width: 33%;
+            background-color: #FF9966;
+            margin: 0 0 0 10px;
+            padding: 6px;
+        }
+
+        footer {
+            clear: both;
+            background-color: #FF9966;
+            text-align: center;
+        }
+
+        h2 {
+            font-size: 50%;
+            font-weight: bold;
+            margin-top: 0;
+            margin-bottom: 0;
+        }
+    </style>
     <!-- <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
         <link rel="stylesheet" type="text/css" href="CSS/css/nav.css">
         <link rel="stylesheet" href="./html5-boilerplate_v9.0.0/css/style.css">
