--- a/simplistic-side-by-side.html
+++ b/simplistic-side-by-side.html
@@ -1,4 +1,4 @@
-<!doctype <!doctype html>
+<!doctype html>
 <!--Everything you write should be using markups -->
 <!-- head section is communicating about the page to the browser -->
 <!-- Anything you write under head is not displayed on the browser content page. -->
@@ -121,6 +121,33 @@
             margin-bottom: 0;
         }
     </style>
+    <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen"
+        charset="utf-8" />
+    <script src="../jQuery-novice-to-ninja/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" src="scripts.js"></script>
+    <meta charset="UTF-8">
+
+    <script type="text/javascript" src="js/jquery-1.7.js"></script>
+    <script type="text/javascript" src="../orris0/js/script.js"></script>
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="format-detection" content="telephone=no">
+    <meta property="og:title" content="A Basic HTML5 Template">
+    <meta name="description" content="A simple HTML5 Template for new projects.">
+    <meta name="author" content="Orris A BakerJr">
+    <meta name="google-adsense-account" content="ca-pub-9639638377144073">
+    <meta property="og:title" content="A Basic HTML5 Template">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.sitepoint.com/a-basic-html5-template/">
+    <meta property="og:description" content="A simple HTML5 Template for new projects.">
+    <meta property="og:image" content="image.png">
+    <meta name="theme-color" content="#712cf9">
+    <meta name="keywords" content="HTML5, Node.js, Jquery">
+    <meta name="author" content="Ian Andolina">
+    <!-- Optional Metadata -->
+    <!-- <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> -->
+    <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
+    <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
         <link rel="stylesheet" type="text/css" href="CSS/css/nav.css">
         <link rel="stylesheet" href="./html5-boilerplate_v9.0.0/css/style.css">
@@ -188,16 +215,6 @@
                     </div>
                 </div><!-- end col-12 -->
                 <!--close top section - content area starts -->
-                    <div id="hnav">
-                        <ul>
-                            <li><a href="index.html">Home Page</a></li>
-                            <li><a href="./page2.html">Page Two</a></li>
-                            <li><a href="./page3.html">Page Three with a long label</a></li>
-                            <li><a href="./page4.html">Page Four</a></li>
-                            <li><a href="./page5.html">Page Five</a></li>
-                        </ul>
-                    </div>
-                </div><!-- end col-12 -->
                 <div id="content">
                     <b>A full page roll-over gallery of greetings cards</b>
                     <p><img title="Koala" alt="Koala" height="165" src="images/Koalasmall.jpg" width="220"></p>
