--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -5,7 +5,7 @@
 
     <!-- Viewport for responsive web design -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Test page for semantic tags</title>
+    <title>Test page for A full page roll-over gallery of greetings, cards</title>
 
     <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen"
         charset="utf-8" />
@@ -62,7 +62,7 @@
         <div class="row">
             <div class="col-12">
                 <header class="data" id="gallerypageheader">
-                    <h1>Practical HTML5 Project's for Fun & Profit</h1>
+                    <h1>A full page roll-over gallery of greetings, cards..</h1>
                     <div class="data" id="container">
                         <p>&nbsp;</p>
                         <p>Tour Orris (default)</p>
