--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -62,7 +62,10 @@
         <div class="row">
             <div class="col-12">
                 <header class="data" id="gallerypageheader">
-                    <h1>A full page roll-over gallery of greetings, cards..</h1>
+                    <div id="banner">
+                        <h1>A full page roll-over gallery of greetings, cards..</h1>
+                    </div>
+                    
                     <div class="data" id="container">
                         <p>&nbsp;</p>
                         <p>Tour Orris (default)</p>
