--- a/index.html
+++ b/index.html
@@ -149,7 +149,10 @@
         <div class="row">
             <div class="col-12">
                 <header class="data" id="html5styleheader"><!--<div id="hdr"> changed to <header>-->
-                    <h1>StarTrackr!</h1>
+                    <div id="banner">
+                        <h1>StarTrackr! A full page roll-over gallery of greetings, cards..</h1>
+                    </div>
+                    
                     <div id="container">
                         <p>&nbsp;</p>
                         <p>Tour Orris (default)</p>
