--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -63,7 +63,7 @@
             <div class="col-12">
                 <header class="data" id="gallerypageheader">
                     <div id="banner">
-                        <h1>A full page roll-over gallery of greetings, cards..</h1>
+                        <h1>A full page roll-over gallery of greetings, cards..</h1><br>
                     </div>
                     
                     <div class="data" id="container">
