--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -61,12 +61,11 @@
     <div class="wrapper">
         <div class="row">
             <div class="col-12">
-                <header class="data" id="gallerypageheader">
-                    <div id="banner">
-                        <h1>A full page roll-over gallery of greetings, cards..</h1><br>
-                    </div>
-                    
-                    <div class="data" id="container">
+                <div class="data" id="container">
+                    <header class="data" id="gallerypageheader">
+                        <div id="banner">
+                            <h1>A full page roll-over gallery of greetings, cards..</h1><br>
+                        </div>
                         <p>&nbsp;</p>
                         <p>Tour Orris (default)</p>
                         <p>
@@ -89,8 +88,8 @@
                             <a href="index2.html">Page 7</a>
                         </p>
                         <p>&nbsp;</p>
-                    </div>
-                </header>
+                    </div><!-- end container -->
+                </header><!-- end header -->
                 <br class="clear">
                 <div class="col-12"> <!-- close top section - content area starts -->
                     <div id="hnav">
