--- a/gallery-3col-mix.html
+++ b/gallery-3col-mix.html
@@ -117,8 +117,9 @@
                         <p>&nbsp;</p>
                     </div>
                 </header>
-                <br class="clear">
-                <div class="col-12"> <!-- close top section - content area starts -->
+            </div><!-- end col-12 -->
+            <br class="clear"><!-- close top section - content area starts -->
+                <div class="col-12"> 
                     <div id="hnav">
                         <ul>
                             <li><a href="index.html">Home Page</a></li>
@@ -128,17 +129,9 @@
                             <li><a href="./page5.html">Page Five</a></li>
                         </ul>
                     </div>
-                </div><!-- end col-12 -->
+                
                 <!--close top section - content area starts -->
-                <div id="hnav">
-                    <ul>
-                        <li><a href="index.html">Home Page</a></li>
-                        <li><a href="./page2.html">Page Two</a></li>
-                        <li><a href="./page3.html">Page Three with a long label</a></li>
-                        <li><a href="./page4.html">Page Four</a></li>
-                        <li><a href="./page5.html">Page Five</a></li>
-                    </ul>
-                </div>
+                
             </div><!-- end col-12 -->
 
             <div id="midcol">
