--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -109,7 +109,9 @@
         <div class="row">
             <div class="col-12">
                 <header class="data" id="gallerypageheader">
-                    <h1>Practical HTML5 Project's for Fun & Profit</h1>
+                    <div id="banner">
+                        <h1>StarTrackr! A full page roll-over gallery of greetings, cards..</h1>
+                    </div>
                     <div id="container">
                         <p>&nbsp;</p>
                         <p>Tour Orris (default)</p>
