--- a/squares-html5.html
+++ b/squares-html5.html
@@ -31,7 +31,9 @@
         <div class="row">
             <div class="col-12">
                 <header class="data" id="gallerypageheader">
-                    <h1>TourOrris's (Rural Retreats)</h1>
+                    <div id="banner">
+                        <h1>StarTrackr! A full page roll-over gallery of greetings, cards..</h1>
+                    </div>
                     <div id="container">
                         <p>&nbsp;</p>
                         <p>Tour Orris (default)</p>
