--- a/gallery-3col-mix.html
+++ b/gallery-3col-mix.html
@@ -91,8 +91,10 @@
         <div class="row">
             <div class="col-12">
                 <header class="data" id="gallerypageheader">
-                    <h1>Practical HTML5 Project's for Fun & Profit</h1>
-                    <div class="data" id="container">
+                    <div id="banner">
+                        <h1>StarTrackr! A full page roll-over gallery of greetings, cards..</h1>
+                    </div>
+                    <div id="container">
                         <p>&nbsp;</p>
                         <p>Tour Orris (default)</p>
                         <p>
@@ -117,8 +119,8 @@
                         <p>&nbsp;</p>
                     </div>
                 </header>
-            </div><!-- end col-12 -->
-            <br class="clear"><!-- close top section - content area starts -->
+                <br class="clear">
+                <!-- close top section - content area starts -->
                 <div class="col-12"> 
                     <div id="hnav">
                         <ul>
