--- a/gallery-one-col.html
+++ b/gallery-one-col.html
@@ -59,7 +59,9 @@
         <div class="row">
             <div class="col-12">
                 <header class="data" id="gallerypageheader">
-                    <h1>TourOrris's (Rural Retreats)</h1>
+                    <div id="banner">
+                        <h1>StarTrackr! A full page roll-over gallery of greetings, cards..</h1>
+                    </div>
                     <div id="container">
                         <p>&nbsp;</p>
                         <p>Tour Orris (default)</p>
@@ -86,6 +88,7 @@
                     </div>
                 </header>
                 <br class="clear">
+                <!-- close top section - content area starts -->
                 <div class="col-12"> <!-- close top section - content area starts -->
                     <div id="hnav">
                         <ul>
