--- a/simplistic-html5.html
+++ b/simplistic-html5.html
@@ -260,7 +260,9 @@
         <div class="row">
             <div class="col-12">
                 <header class="data" id="gallerypageheader">
-                    <h1>TourOrris's (Rural Retreats)</h1>
+                    <div id="banner">
+                        <h1>StarTrackr! A full page roll-over gallery of greetings, cards..</h1>
+                    </div>
                     <div id="container">
                         <p>&nbsp;</p>
                         <p>Tour Orris (default)</p>
@@ -287,7 +289,8 @@
                     </div>
                 </header>
                 <br class="clear">
-                <div class="col-12"> <!-- close top section - content area starts -->
+                <!-- close top section - content area starts -->
+                <div class="col-12"> 
                     <div id="hnav">
                         <ul>
                             <li><a href="index.html">Home Page</a></li>
