--- a/simplistic-html5-java.html
+++ b/simplistic-html5-java.html
@@ -246,7 +246,9 @@
         <div class="row">
             <div class="col-12">
                 <header class="data" id="gallerypageheader">
-                    <h1>TourOrris's (Rural Retreats)</h1>
+                    <div id="banner">
+                        <h1>StarTrackr! A full page roll-over gallery of greetings, cards..</h1>
+                    </div>
                     <div id="container">
                         <p>&nbsp;</p>
                         <p>Tour Orris (default)</p>
@@ -260,7 +262,7 @@
                             <a href="gallery-2col.html">Page 7</a>
                         </p>
                         <p>&nbsp;</p>
-                        <p class="inline-block">Practical HTML5 Project&#39;s<br>
+                        <p class="inline-block">Practical HTML5 Project&#39;s for Fun and Profit<br>
                             <a href="gallery-3col-mix.html">Page 1</a>
                             <a href="gallery-page-validated.html">Page 2</a>
                             <a href="squares-html5.html">Page 3</a>
@@ -273,7 +275,8 @@
                     </div>
                 </header>
                 <br class="clear">
-                <div class="col-12"> <!-- close top section - content area starts -->
+                <!-- close top section - content area starts -->
+                <div class="col-12"> 
                     <div id="hnav">
                         <ul>
                             <li><a href="index.html">Home Page</a></li>
