--- a/html5-nav.html
+++ b/html5-nav.html
@@ -70,8 +70,10 @@
         <div class="row">
             <div class="col-12">
                 <header class="data" id="gallerypageheader">
-                    <h1>Practical HTML5 Project's for Fun & Profit</h1>
-                    <div class="data" id="container">
+                    <div id="banner">
+                        <h1>StarTrackr! A full page roll-over gallery of greetings, cards..</h1>
+                    </div>
+                    <div id="container">
                         <p>&nbsp;</p>
                         <p>Tour Orris (default)</p>
                         <p>
@@ -97,7 +99,8 @@
                     </div>
                 </header>
                 <br class="clear">
-                <div class="col-12"> <!-- close top section - content area starts -->
+                <!-- close top section - content area starts -->
+                <div class="col-12"> 
                     <div id="hnav">
                         <ul>
                             <li><a href="index.html">Home Page</a></li>
