--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -63,9 +63,10 @@
             <div class="col-12">
                 <div class="data" id="container">
                     <header class="data" id="gallerypageheader">
-                        <div id="banner">
-                            <h1>A full page roll-over gallery of greetings, cards..</h1><br>
-                        </div>
+                    <div id="banner">
+                        <h1>StarTrackr! A full page roll-over gallery of greetings, cards..</h1>
+                    </div>
+                    <div id="container">
                         <p>&nbsp;</p>
                         <p>Tour Orris (default)</p>
                         <p>
@@ -88,11 +89,11 @@
                             <a href="index2.html">Page 7</a>
                         </p>
                         <p>&nbsp;</p>
-                    </header><!-- end header -->
-                </div><!-- end container -->
-                
+                    </div>
+                </header>
                 <br class="clear">
-                <div class="col-12"> <!-- close top section - content area starts -->
+                <!-- close top section - content area starts -->
+                <div class="col-12"> 
                     <div id="hnav">
                         <ul>
                             <li><a href="index.html">Home Page</a></li>
