--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -62,7 +62,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="data" id="container">
-                    <header class="data" id="gallerypageheader">
+                    <header class="data" id="gallerypageheader"><!--<div id="hdr"> changed to <header>-->
                     <div id="banner">
                         <h1>StarTrackr! A full page roll-over gallery of greetings, cards..</h1>
                     </div>
