--- a/index2.html
+++ b/index2.html
@@ -160,10 +160,10 @@
                 <div id="content">
                     <b>Practical HTML5 Projects for fun and Profit</b>
                     <div class="picture">
-                        <p><img title="Koala" alt="Koala" height="82" src="donnas-footer-2.png" width="110"></p>
+                      <!--  <p><img title="Koala" alt="Koala" height="82" src="donnas-footer-2.png" width="110"></p>
                         <p>&nbsp;</p>
                         <p>&nbsp;</p>
-                        <p>&nbsp;</p>
+                        <p>&nbsp;</p> -->
                     </div>
                     <br class="clear">
                     <div id="navigation">
