--- a/index2.html
+++ b/index2.html
@@ -160,8 +160,8 @@
                 <div id="content">
                     <b>Practical HTML5 Projects for fun and Profit</b>
                     <div class="picture">
-                      <!--  <p><img title="Koala" alt="Koala" height="82" src="donnas-footer-2.png" width="110"></p>
-                        <p>&nbsp;</p>
+                        <p><img title="Koala" alt="Koala" height="82" src="donnas-footer-2.png" width="110"></p>
+                      <!--  <p>&nbsp;</p>
                         <p>&nbsp;</p>
                         <p>&nbsp;</p> -->
                     </div>
