--- a/index2.html
+++ b/index2.html
@@ -72,7 +72,9 @@
     <meta property="og:image:height" content="1000" />
 
     <!-- Favicon-->
-
+    <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
+    <link href="./CSS/HTML5-style-2.css" rel="stylesheet">
+    <!-- 
     <!--<link rel="icon" href="images/favicon.ico">-->
 
     <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
@@ -88,8 +90,7 @@
     <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
     <!-- SimpleLightbox plugin CSS-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
+    
     <!--
         <link href="./vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
         Theme CSS - Includes Bootstrap 
