--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html ng-app lang="en">
-
 <head>
-
     <!-- Viewport for responsive web design -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Test page for A full page roll-over gallery of greetings, cards</title>
-
-    <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen"
-        charset="utf-8" />
+    <title>Test page for A full page roll-over gallery</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8" />
     <script src="../jQuery-novice-to-ninja/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" src="scripts.js"></script>
-    <meta charset="UTF-8">
+    
 
     <script type="text/javascript" src="js/jquery-1.7.js"></script>
     <script type="text/javascript" src="../orris0/js/script.js"></script>
