--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="scripts.js"></script>
 
     <script type="text/javascript" src="js/jquery-1.7.js"></script>
-    <script type="text/javascript" src="../orris0/js/script.js"></script>
+    <!-- <script type="text/javascript" src="../orris0/js/script.js"></script> -->
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="format-detection" content="telephone=no">
