--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html ng-app lang="en">
+
 <head>
     <!-- Viewport for responsive web design -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Test page for A full page roll-over gallery</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8" />
+    <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen"
+        charset="utf-8" />
     <script src="../jQuery-novice-to-ninja/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" src="scripts.js"></script>
 
@@ -89,6 +91,17 @@
                     </header>
                     <br class="clear">
                     <nav>
+                        <ul id="main-menu">
+                            <li><a href="about.html" title="">About Us</a></li>
+                            <li><a href="news.html" title="">News</a></li>
+                            <li><a href="events.html" title="">Events</a></li>
+                            <li><a href="volunteers.html" title="">Volunteers</a></li>
+                            <li><a href="services.html" title="">Services</a></li>
+                            <li><a href="membership.html" title="">Membership</a></li>
+                            <li><a href="index2.html" title="">Home</a></li>
+                        </ul>
+                    </nav>
+                    <nav>
                         <ul>
                             <li><a href="#" title="Page Two">Page Two</a></li>
                             <li><a href="#" title="page Three">Page Three</a></li>
@@ -102,7 +115,7 @@
  <br>
  <![endif]-->
                     <div id="main-content">
-                        <br>This content panel can contain several columns<br><br>
+                        <!-- <br>This content panel can contain several columns<br><br> -->
 
                         <br class="clear">
                         <!-- close top section - content area starts -->
