--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -111,9 +111,6 @@
                             <li><a href="#" title="Return to Home Page">Home Page</a></li>
                         </ul>
                     </nav>
-                    <!--[if lte IE 7]>
- <br>
- <![endif]-->
                     <div id="main-content">
                         <!-- <br>This content panel can contain several columns<br><br> -->
 
@@ -289,8 +286,8 @@
                                 officia
                                 deserunt mollit anim id est laborum.
                             </p>
-                        </div><!-- end content -->
-                    </div>
+                        </div><!-- end html5stylecontent -->
+                    </div><!-- end content -->
                     <!--<div id=footer"> changed to <footer>-->
                     <footer role="contentinfo" class="row">
                         <a href="https://orris0.github.io/orris0/HTML5-Ch1-7.html"
