--- a/gallery-2col.html
+++ b/gallery-2col.html
@@ -30,7 +30,11 @@
             <div class="col-12">
                 <header class="data" id="gallerypageheader">
                     <div id="banner">
-                        <h1>StarTrackr! A full page roll-over gallery of greetings, cards..</h1>
+                        <header>
+                            <h1>A full page roll-over gallery of greetings cards</h1>
+                            <h2>Hover the mouse over a small picture to see an enlarged version</h2>
+                        </header>
+
                     </div>
                     <div id="container">
                         <p>&nbsp;</p>
@@ -59,7 +63,7 @@
                 </header>
                 <br class="clear">
                 <!-- close top section - content area starts -->
-                <div class="col-12"> 
+                <div class="col-12">
                     <div id="hnav">
                         <ul>
                             <li><a href="index.html">Home Page</a></li>
@@ -160,7 +164,8 @@
                                     <ul>
                                         <li
                                             class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-6 current_page_item menu-item-106">
-                                            <a href="index.html">Our Story</a></li>
+                                            <a href="index.html">Our Story</a>
+                                        </li>
                                         <li
                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-105">
                                             <a href="#">Our Flowers</a>
