--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -48,8 +48,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic"
-        rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css">
     <!-- SimpleLightbox plugin CSS-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet">
 
@@ -101,16 +100,7 @@
                             <li><a href="index2.html" title="">Home</a></li>
                         </ul>
                     </nav>
-                    <nav>
-                        <ul>
-                            <li><a href="#" title="Page Two">Page Two</a></li>
-                            <li><a href="#" title="page Three">Page Three</a></li>
-                            <li><a href="#" title="Page Four">Four</a></li>
-                            <li><a href="#" title="Page Five">Page Five</a></li>
-                            <li><a href="#" title="Page Six">Page Six</a></li>
-                            <li><a href="#" title="Return to Home Page">Home Page</a></li>
-                        </ul>
-                    </nav>
+                    
                     <div id="main-content">
                         <!-- <br>This content panel can contain several columns<br><br> -->
 
