--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <div class="col-12">
                 <header class="data" id="html5styleheader"><!--<div id="hdr"> changed to <header>-->
                     <div id="banner">
-                        <h1>StarTrackr! A full page roll-over gallery of greetings, cards..</h1>
+                        <h1>StarTrackr!</h1>
                     </div>
                     
                     <div id="container">
