--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Test page for A full page roll-over gallery</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen"
-        charset="utf-8" />
+    <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8" />
     <script src="../jQuery-novice-to-ninja/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" src="scripts.js"></script>
 
@@ -31,6 +30,7 @@
     <!-- Optional Metadata -->
     <!-- <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> -->
     <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
     <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
     
     <link rel="stylesheet" href="./CSS/nav.css">
