--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -29,7 +29,7 @@
     <meta name="author" content="Ian Andolina">
     <!-- Optional Metadata -->
     <!-- <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> -->
-    <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
+    <link rel="stylesheet" type="text/css" href="./CSS/gallery-page-HTML5.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
     <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
     
