--- a/events.html
+++ b/events.html
@@ -72,7 +72,8 @@
         <!-- Favicon-->
 
         <!--<link rel="icon" href="images/favicon.ico">-->
-
+        <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
+		
         <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
         <!--<link rel="stylesheet" href="css/styles.css?v=1.0">-->
 
@@ -80,14 +81,13 @@
         <link rel="author" href="mailto:internetearnings@live.com">
         <link rel="author" type="text/html" href="https://orrisb.github.io">
         <!-- Bootstrap Icons-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
         <!-- SimpleLightbox plugin CSS-->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
         <style>
             p {
                 color: red;
