--- a/events.html
+++ b/events.html
@@ -16,10 +16,10 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="format-detection" content="telephone=no">
 
-        <meta property="og:title" content="A Basic HTML5 Template" />
-        <meta property="og:type" content="video.movie" />
-        <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
-        <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
+        <meta property="og:title" content="A Basic HTML5 Template">
+        <meta property="og:type" content="video.movie">
+        <meta property="og:url" content="https://www.imdb.com/title/tt0117500/">
+        <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg">
         <meta name="description" content="A simple HTML5 Template for new projects.">
         <meta name="author" content="Orris A BakerJr">
         <meta name="google-adsense-account" content="ca-pub-9639638377144073">
@@ -33,41 +33,41 @@
         <meta name="author" content="Ian Andolina">
 
         <!-- Optional Metadata-->
-        <meta property="og:audio" content="https://example.com/sound.mp3" />
-        <meta property="og:audio:secure_url" content="https://secure.example.com/sound.mp3" />
-        <meta property="og:audio:type" content="audio/mpeg" />
+        <meta property="og:audio" content="https://example.com/sound.mp3">
+        <meta property="og:audio:secure_url" content="https://secure.example.com/sound.mp3">
+        <meta property="og:audio:type" content="audio/mpeg">
 
-        <meta property="og:audio" content="https://example.com/bond/theme.mp3" />
-        <meta property="og:description" content="Sean Connery found fame and fortune as the suave, sophisticated British agent, James Bond." />
-        <meta property="og:determiner" content="the" />
-        <meta property="og:locale" content="en_GB" />
-        <meta property="og:locale:alternate" content="fr_FR" />
-        <meta property="og:locale:alternate" content="es_ES" />
-        <meta property="og:site_name" content="IMDb" />
+        <meta property="og:audio" content="https://example.com/bond/theme.mp3">
+        <meta property="og:description" content="Sean Connery found fame and fortune as the suave, sophisticated British agent, James Bond.">
+        <meta property="og:determiner" content="the">
+        <meta property="og:locale" content="en_GB">
+        <meta property="og:locale:alternate" content="fr_FR">
+        <meta property="og:locale:alternate" content="es_ES">
+        <meta property="og:site_name" content="IMDb">
 
         <!--og: video example:-->
 
-        <meta property="og:video" content="https://example.com/bond/trailer.swf" />
-        <meta property="og:video" content="https://example.com/movie.swf" />
-        <meta property="og:video:secure_url" content="https://secure.example.com/movie.swf" />
-        <meta property="og:video:type" content="application/x-shockwave-flash" />
-        <meta property="og:video:width" content="400" />
-        <meta property="og:video:height" content="300" />
+        <meta property="og:video" content="https://example.com/bond/trailer.swf">
+        <meta property="og:video" content="https://example.com/movie.swf">
+        <meta property="og:video:secure_url" content="https://secure.example.com/movie.swf">
+        <meta property="og:video:type" content="application/x-shockwave-flash">
+        <meta property="og:video:width" content="400">
+        <meta property="og:video:height" content="300">
 
         <!-- A full image example:-->
 
-        <meta property="og:image" content="https://example.com/ogp.jpg" />
-        <meta property="og:image:secure_url" content="https://secure.example.com/ogp.jpg" />
-        <meta property="og:image:type" content="image/jpeg" />
-        <meta property="og:image:width" content="400" />
-        <meta property="og:image:height" content="300" />
-        <meta property="og:image:alt" content="A shiny red apple with a bite taken out" />
-        <meta property="og:image" content="https://example.com/rock.jpg" />
-        <meta property="og:image:width" content="300" />
-        <meta property="og:image:height" content="300" />
-        <meta property="og:image" content="https://example.com/rock2.jpg" />
-        <meta property="og:image" content="https://example.com/rock3.jpg" />
-        <meta property="og:image:height" content="1000" />
+        <meta property="og:image" content="https://example.com/ogp.jpg">
+        <meta property="og:image:secure_url" content="https://secure.example.com/ogp.jpg">
+        <meta property="og:image:type" content="image/jpeg">
+        <meta property="og:image:width" content="400">
+        <meta property="og:image:height" content="300">
+        <meta property="og:image:alt" content="A shiny red apple with a bite taken out">
+        <meta property="og:image" content="https://example.com/rock.jpg">
+        <meta property="og:image:width" content="300">
+        <meta property="og:image:height" content="300">
+        <meta property="og:image" content="https://example.com/rock2.jpg">
+        <meta property="og:image" content="https://example.com/rock3.jpg">
+        <meta property="og:image:height" content="1000">
 
         <!-- Favicon-->
 
@@ -83,7 +83,7 @@
         <!-- Bootstrap Icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
         <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
         <!-- SimpleLightbox plugin CSS-->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
