--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width-device-width, initial-scale=1">
     <script type="text/javascript" src="js/jquery-1.7.js"></script>
     <script type="text/javascript" src="../orris0/js/script.js"></script>
+	<script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" src="./scripts.js"></script>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="format-detection" content="telephone=no">
@@ -46,34 +48,7 @@
         rel="stylesheet" type="text/css">
     <!-- SimpleLightbox plugin CSS-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet">
-    <!--
-</head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="format-detection" content="telephone=no">
-    <meta property="og:title" content="A Basic HTML5 Template">
-    <meta property="og:type" content="video.movie">
-    <meta property="og:url" content="https://www.imdb.com/title/tt0117500/">
-    <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg">
-    <meta property="og:description" content="Orris Baker found assaulted and mistreated at the BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
-    <meta name="author" content="Orris A BakerJr">
-    <meta name="google-adsense-account" content="ca-pub-9639638377144073">
-    <meta property="og:title" content="A Basic HTML5 Template">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.sitepoint.com/a-basic-html5-template/">
-    <meta property="og:description" content="A simple HTML5 Template for new projects.">
-    <meta property="og:image" content="image.png">
-    <meta name="theme-color" content="#712cf9">
-    <meta name="keywords" content="HTML5, Node.js, Jquery">
-    -->
-    <meta name="author" content="Ian Andolina">
-    <!-- Optional Metadata -->
-    <meta property="og:audio" content="https://example.com/sound.mp3">
-    <meta property="og:audio:secure_url" content="https://secure.example.com/sound.mp3">
-    <meta property="og:audio:type" content="audio/mpeg">
-    <meta property="og:audio" content="https://example.com/bond/theme.mp3">
-    <meta property="og:description"
-        content="Orris Baker found assaulted and mistreated at the BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
-    <meta property="og:determiner" content="the">
+
     <meta property="og:locale" content="en_GB">
     <meta property="og:locale:alternate" content="fr_FR">
     <meta property="og:locale:alternate" content="es_ES">
@@ -85,34 +60,8 @@
     <meta property="og:video:type" content="application/x-shockwave-flash">
     <meta property="og:video:width" content="400">
     <meta property="og:video:height" content="300">
-    <!-- A full image example: --
-    <meta property="og:image" content="https://example.com/ogp.jpg">
-    <meta property="og:image:secure_url" content="https://secure.example.com/ogp.jpg">
-    <meta property="og:image:type" content="image/jpeg">
-    <meta property="og:image:width" content="400">
-    <meta property="og:image:height" content="300">
-    <meta property="og:image:alt" content="A shiny red apple with a bite taken out">
-    <meta property="og:image" content="https://example.com/rock.jpg">
-    <meta property="og:image:width" content="300">
-    <meta property="og:image:height" content="300">
-    <meta property="og:image" content="https://example.com/rock2.jpg">
-    <meta property="og:image" content="https://example.com/rock3.jpg">
-    <meta property="og:image:height" content="1000">
-    <!-- <link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css"> --
-    <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.8.0/normalize.min.css">
-    <!-- <link rel="stylesheet" type="text/css" href="./style.css"> 
-    <link rel="stylesheet" href="./html5-boilerplate_v9.0.0/css/gallery-page-HTML5.css"> -->
-
     <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
     <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <!--   
-        <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-    -->
-    <!-- <link rel="stylesheet" type="text/css" href="CSS/css/nav.css"> -->
-    <!-- <link rel="stylesheet" href="./html5-boilerplate_v9.0.0/css/gallery-page-HTML5.css"> -->
-    <!-- <link rel="stylesheet" type="text/css" href="./CSS/css/inline-block.css"> -->
-    <!-- <link rel="stylesheet" href="./CSS/nav.css"> -->
 
     <link rel="stylesheet" href="../orris0/CSS/css/font-awesome.min.css">
 
