--- a/index.html
+++ b/index.html
@@ -21,17 +21,28 @@
     <meta property="og:url" content="https://www.sitepoint.com/a-basic-html5-template/">
     <meta property="og:description" content="A simple HTML5 Template for new projects.">
     <meta property="og:image" content="image.png">
+	<meta property="og:locale" content="en_GB">
+    <meta property="og:locale:alternate" content="fr_FR">
+    <meta property="og:locale:alternate" content="es_ES">
+    <meta property="og:site_name" content="IMDb">
+    <!--og: video example: -->
+    <meta property="og:video" content="https://example.com/bond/trailer.swf">
+    <meta property="og:video" content="https://example.com/movie.swf">
+    <meta property="og:video:secure_url" content="https://secure.example.com/movie.swf">
+    <meta property="og:video:type" content="application/x-shockwave-flash">
+    <meta property="og:video:width" content="400">
+    <meta property="og:video:height" content="300">
+    <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+    <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
     <meta name="theme-color" content="#712cf9">
     <meta name="keywords" content="HTML5, Node.js, Jquery">
     <meta name="author" content="Ian Andolina">
     <!-- Optional Metadata -->
     <!-- <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> -->
+	<link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8">
     <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
-    <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
-        <link rel="stylesheet" type="text/css" href="CSS/css/nav.css">
-        <link rel="stylesheet" href="./html5-boilerplate_v9.0.0/css/style.css">
-        <link rel="stylesheet" type="text/css" href="./CSS/css/inline-block.css"> -->
+    <!-- <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet"> -->
+    
     <link rel="stylesheet" href="./CSS/nav.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.8.0/normalize.min.css">
     <link rel="stylesheet" href="../orris0/CSS/css/font-awesome.min.css">
@@ -74,17 +85,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic"
-        rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css">
     <!-- SimpleLightbox plugin CSS-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet">
     <!-- Core theme CSS (includes Bootstrap)-->
     <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8">
-
-    <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-    <script type="text/javascript" src="./scripts.js"></script>
-
-
     <link href="./Myjourneyonline.com_files/css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="../Bootstrap/dist/assets/img/HTMLBadge.ico">
     <link rel="icon" type="image/x-icon" href="../Bootstrap/dist/assets/favicon.ico">
