--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -85,11 +85,48 @@
 </head>
 
 <body>
+	<header><!--<div id="hdr"> changed to <header>-->
+<h1>Devon's Rural Retreats</h1>
+</header>
+<!--close top section - content area starts -->
+<div id="content">
+<h2>Award winning accommodation, self catering or bed and breakfast</h2>
+<div id="leftcol">
+<h3>Cottages, converted barns, caravans</h3>
+<img alt="Cottage interior" title="Cottage interior" height="225"
+src="images/cotdining300.jpg" width="300"><br>The superb interior
+of one of our cottages
+</div>
+<nav><!--use the semantic tag <nav>-->
+<ul><!--start of menu list-->
+<li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
+<li class="btn"><a href="maps.html" title="Location Maps">Maps</a>
+</li><li class="btn"><a href="faqs.html" title="Frequently Asked Questions">Information</a>
+</li>
+<li class="btn"><a href="attractions.html" title="Local attractions">Attractions</a></li>
+<li class="btn"><a href="contact.html" title="Contact us">Contact Us</a></li>
+<li class="btn"><a href="index.html" title="Return to Home Page">Home Page</a></li>
+</ul><!--end of menu list-->
+</nav><!--</div> removed and replaced with </nav>-->
+<div id="midcol">
+<h3>Situated in the UK's beautiful Devon countryside</h3>
+<img title="Devon countryside" alt="Devon countryside" src="images/devon398.jpg"
+height="229" width="398">
+</div>
+<br class="clear">
+</div><!--content section closed-->
+<!--<div id=footer"> changed to <footer>-->
+<footer><p>Footer goes here</p>
+</footer>
+</body>
+</html>
+
+<!--	
     <div class="wrapper">
         <div class="row">
             <div class="col-12">
                 <div class="data" id="container">
-                    <header class="data" id="html5style2header"><!--<div id="hdr"> changed to <header>-->
+                    <header class="data" id="html5style2header"><!--<div id="hdr"> changed to <header>--
                         <div id="banner">
                             <h1>StarTrackr! A full page roll-over gallery of greetings, cards..</h1>
                         </div>
@@ -132,10 +169,10 @@
                     </nav>
                     
                     <div id="main-content">
-                        <!-- <br>This content panel can contain several columns<br><br> -->
+                        <!-- <br>This content panel can contain several columns<br><br> --
 
                         <br class="clear">
-                        <!-- close top section - content area starts -->
+                        <!-- close top section - content area starts --
                         <div class="col-12">
                             <div id="hnav">
                                 <ul>
@@ -147,7 +184,8 @@
                                 </ul>
                             </div>
                         </div><!-- end col-12 -->
-                        <!--close top section - content area starts -->
+						
+                        <!--close top section - content area starts --
                         <div class="data" id="html5stylecontent">
                             <h2>Award winning accommodation, self catering or bed and breakfast</h2>
                             <div class="data" id="html5styleleftcol">
@@ -156,8 +194,8 @@
                                     src="../orris0/images/bda2.jpg" width="300"><br>The superb interior of one of our
                                 cottages
                             </div>
-                            <nav class="data" id="html5stylenav"><!--use the semantic tag <nav>-->
-                                <ul><!--start of menu list-->
+                            <nav class="data" id="html5stylenav"><!--use the semantic tag <nav>--
+                                <ul><!--start of menu list--
                                     <li class="btn"> <a href="accommodation.html"
                                             title="Accommodation">Accommodation</a></li>
                                     <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
@@ -168,8 +206,8 @@
                                     </li>
                                     <li class="btn"><a href="contact.html" title="Contact us">Contact Us</a></li>
                                     <li class="btn"><a href="index.html" title="Return to Home Page">Home Page</a></li>
-                                </ul><!--end of menu list-->
-                            </nav><!--</div> removed and replaced with </nav>-->
+                                </ul><!--end of menu list--
+                            </nav><!--</div> removed and replaced with </nav>--
                             <div class="data" id="html5stylemidcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
                                 <img title="Devon countryside" alt="Devon countryside" src="../orris0/images/bda.gif"
@@ -306,9 +344,9 @@
                                 officia
                                 deserunt mollit anim id est laborum.
                             </p>
-                        </div><!-- end html5stylecontent -->
+                        </div><!-- end html5stylecontent --
                     </div><!-- end content -->
-                    <!--<div id=footer"> changed to <footer>-->
+                    <!--<div id=footer"> changed to <footer>--
                     <footer role="contentinfo" class="row">
                         <a href="https://orris0.github.io/orris0/HTML5-Ch1-7.html"
                             class="back-to-top d-flex align-items-center justify-content-center"><i
@@ -324,15 +362,15 @@
                         </div>
                     </footer>
                     <!-- Vendor JS Files --
-			    <script src="../orris0/main.js"></script> -->
+			    <script src="../orris0/main.js"></script> --
                     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
                     <script src="../orris0/bootstrap.bundle.min.js"></script>
 
-                </div><!-- end wrapper -->
+                </div><!-- end wrapper --
                 <script type="text/javascript" src="js/jquery-1.7.js"></script>
                 <script type="text/javascript" src="js/script.js"></script>
-</body><!-- end body  -->
+</body><!-- end body  --
 
 </html>
 <!-- View in Browser --
