--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -61,12 +61,12 @@
 	<!-- <link rel="stylesheet" type="text/css" href="starter-page-style-2.css"> -->
     <link rel="stylesheet" type="text/css" href=" HTML5-style-2.css">
     <!-- Optional Metadata -->
-    <!-- <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> -->
-    <link rel="stylesheet" type="text/css" href="./CSS/gallery-page-HTML5.css">
+    <!-- <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> 
+    <link rel="stylesheet" type="text/css" href="./CSS/gallery-page-HTML5.css"> -->
 	<link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
     
     
-    <link rel="stylesheet" href="./CSS/nav.css">
+   <!-- <link rel="stylesheet" href="./CSS/nav.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.8.0/normalize.min.css">
     <link rel="stylesheet" href="../orris0/CSS/css/font-awesome.min.css">
     <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
