--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -86,7 +86,10 @@
 
 <body>
 	<header><!--<div id="hdr"> changed to <header>-->
-        <h1>Devon's Rural Retreats</h1>
+		<div id="banner">
+            <h1>StarTrackr! A full page roll-over gallery of greetings, cards..</h1>
+        </div>
+        <!-- <h1>Devon's Rural Retreats</h1> -->
     </header>
     <!--close top section - content area starts -->
     <div id="content">
